--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-body {
+html {
+  font-family: sans-serif;
+  box-sizing: border-box;
+  font-size: 16px;
+  background-color: #3e3e3eff;
+  color: #dbdbdbff;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-weight: normal;
 }
