--- a/src/App.css
+++ b/src/App.css
@@ -72,41 +72,28 @@
 }
 
 .play {
-  height: 100vh;
-  max-height: 900px;
-  width: 100%;
-  max-width: 500px;
-  padding: 20px;
-
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  height: 100vh;
+  padding: 20px;
+  width: 100%;
 }
 
 .play__points {
-  width: 100%;
   display: flex;
-  justify-content: space-between;
-
-  color: #dbdbdb;
-  font-size: 24px;
-}
-
-.play__point {
-  width: 50%;
-  text-align: center;
-}
-
-.main {
   width: 100%;
+  justify-content: space-between;
+}
+
+.choices {
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
 
 .play__counter {
-  margin-bottom: 4px;
-
   color: #b3afaf;
   font-size: 20px;
   text-align: center;
@@ -114,6 +101,34 @@
 
 .play__play-game {
   color: #dbdbdb;
-  font-size: 46px;
   text-transform: uppercase;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex: 1;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+}
+
+.result__choice {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.result__title {
+  font-size: 28px;
+  text-transform: uppercase;
+}
+
+.result__you-choice {
+  transform: rotate(90deg);
+}
+
+.result__friend-choice {
+  transform: rotate(-90deg) scaleX(-1);
 }
