--- a/src/App.css
+++ b/src/App.css
@@ -49,16 +49,21 @@
 }
 
 .button {
-  margin: 0 10px;
+  display: block;
+  margin: 0 auto;
   background: none;
   border: 0;
   color: #dbdbdb;
   font-size: 16px;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
-.register {
-  font-weight: bold;
+.empty {
+  display: block;
+  text-align: center;
+  color: red;
+  font-size: 16px;
 }
 
 .subtitle {
