--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,13 @@
   font-weight: bold;
 }
 
+.button:focus {
+  outline: 0;
+}
+
 .empty {
-  display: block;
-  text-align: center;
+  position: absolute;
+  bottom: 20px;
   color: red;
   font-size: 16px;
 }
