--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+html {
+  font-family: sans-serif;
+  box-sizing: border-box;
+  font-size: 16px;
+  background-color: #3e3e3eff;
+  color: #dbdbdbff;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
 .container {
   display: flex;
   flex-direction: column;
