--- a/src/App.css
+++ b/src/App.css
@@ -136,11 +136,9 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 .result {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  flex: 1;
+  height: 25vh;
   justify-content: space-around;
-  align-items: center;
-  padding: 20px;
+  font-size: 24px;
 }
 
 .result__choice {
