--- a/src/App.css
+++ b/src/App.css
@@ -70,14 +70,21 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 
 .button {
   cursor: pointer;
-  display: block;
-  margin: 0 auto;
+  display: inline-block;
+  margin: 0 4px 10px;
+  padding: 4px 8px;
   background: none;
-  border: 0;
   color: #dbdbdb;
-  font-size: 16px;
+  border: 0;
+  border-radius: 4px;
+  font-size: 14px;
   text-transform: uppercase;
   font-weight: bold;
+}
+
+.button:first-of-type {
+  border: solid 1px;
+  font-size: 16px;
 }
 
 .button:focus {
@@ -86,9 +93,10 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 
 .empty {
   position: absolute;
-  bottom: 20px;
-  color: red;
-  font-size: 16px;
+  bottom: -40px;
+  color: black;
+  font-size: 14px;
+  padding-right: 40px;
 }
 
 .subtitle {
@@ -221,4 +229,10 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     font-size: 46px;
   }
 
+}
+
+.email {
+  position: fixed;
+  left: 10px;
+  bottom: 10px;
 }
